# pro-recsys-finalproject-recsys-05

./: .dockerignore  .env.example  .env.prod.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.dev  EXPERIMENT_DETAILS.md  EXPERIMENT_RESULTS.xlsx  README.md  README_SSH.md  alembic.ini  convert_json_to_pickle.py  deploy.sh  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  init-letsencrypt.sh  project_status.json  pyproject.toml  readme.md  verify_user_crud_v2.py
.github/: pull_request_template.md
.github/workflows/: deploy.yml
backend/: README.md  README_DEPLOYMENT.md  check_steam.py  entrypoint.sh  pyproject.toml  test_gcs.py  test_import.py  verify_chat_mvp.py  verify_imports.py  verify_router.py  verify_strict_mode.py
backend/alembic/: env.py
backend/alembic/versions/: 04606b955656_init_mvp_schema.py
backend/app/: database.py  main.py  models.py  schemas.py  storage.py
backend/app/core/: chat_cache.py  config.py  database.py  env.py  logger.py  redis.py  redis_cache.py
backend/app/domains/: __init__.py
backend/app/domains/chat/: chatbot.py  interfaces.py  models.py  orchestrator.py  repository.py  reranker.py  router.py  schemas.py  services.py  tools.py
backend/app/domains/chat/agent/: context.py  engine.py
backend/app/domains/chat/providers/: base.py  clova.py  gemini.py  rag_reasoning.py
backend/app/domains/chat/tools/: base.py  filesystem.py  registry.py  tool_recommand.py  tool_search.py  tools.py
backend/app/domains/game/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/domains/recommendation/: integrated_service.py  models.py  repository.py  router.py  service.py
backend/app/domains/recommendation/ml_inference/: config.py  inference_service.py
backend/app/domains/steam/: router.py  service.py
backend/app/domains/user/: models.py  repository.py  router.py  schemas.py  service.py
backend/app/routers/: health.py  recommend.py  steam.py  test.py
backend/app/routers/test/: __init__.py  game.py  user.py
backend/app/services/: steam_service.py
backend/app/services/ml_inference/: __init__.py  config.py  inference_service.py
backend/docs/: BACKEND_INTEGRATION_GUIDE.md  FUNCTION_CALL_IMPLEMENTATION_PLAN.md  FUNCTION_CALL_TOOLS_DEVELOPMENT.md
backend/logs/: README.md
backend/nginx/: Dockerfile  nginx.conf
backend/scripts/: README.md  check_vector.py  convert_ease_checkpoint.py  gcs_utils.py  inspect_data.py  load_games.py  loader.py  manage_data.py  merge_vector.py  process_data.py  test_vector_search.py
backend/test/: 1_upload_to_gcs.py  2_ingest_from_gcs.py  3_fast_ingest.py  4_verify_data.py  README.md  conftest.py  models.py  test_api_simple.py  test_gcs.py  test_seam_pins.py  test_services.py
backend/test/domains/chat/: README.md  manual_clova_multiturn.py  manual_clova_multiturn_test.py  manual_user_flow_test.py  test_agent_engine.py  test_chat_multiturn_db.py  test_chatbot_readiness.py  test_conversation_owner.py  test_llm_failure_paths.py  test_reranker.py  test_tool_schemas.py
backend/test/domains/game/: test_game_flow.py
backend/test/domains/recommendation/: test_score_merge.py
backend/test/domains/user/: test_user_flow.py
configs/: gcs_config.yaml
configs/backend/: .env.example
configs/frontend/: .env.example
data_collection/: README.md  README_review_jsonl.md  collect_games.py  collect_reviews.py  collect_users.py  pipeline_manager.py  scheduler_aps.py  scheduler_prefect.py
data_collection/archive/: review_crawing.py  user_data_collector.py
data_collection/collectors/: collect_games.py  collect_reviews.py  collect_users.py  pipeline_manager.py
data_collection/core/: api_handler.py  data_manager.py
data_collection/prefect/: flows.py  utils.py
docs/: DOCKER_DEBUGGING.md  ENVIRONMENT_CONTRACT.md  EVOLUTION-NEEDED.md  MAINTENANCE.md  PRD.md  RAG_FLOW.md  REACTIVATION_PLAN.md  SPEC.md
docs/adr/: 0001-maintenance-harness.md  0002-doc-architecture.md  0003-ops-execution-lane.md  0004-harness-admission-gate.md  0005-codex-exec-orchestration.md  0006-doc-governance-spec.md  0007-llm-transport-layer.md  README.md
docs/backend-refactoring/: PLAN.md
docs/execplan/: README.md
docs/reactivation/: BENTOML_VERIFY.md  HANDOFF-2026-07-10-harness-confer.md  HANDOFF.md  PLAN.md  REACTIVATION_LOG.md
frontend/: .dockerignore  Dockerfile  Dockerfile.prod  README.md  eslint.config.js  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vercel.json  vite.config.ts
frontend/src/: App.tsx  index.css
ml_llm/: .dockerignore  doc_to_vector_local.py  execute.sh  pyproject.toml  raw_to_doc.py  run_local_embedding.ps1  run_local_embedding.sh  run_raw_to_doc.ps1  run_raw_to_doc.sh
ml_llm/doc_template/: default.j2  default.json
ml_llm/proto/repl/: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml
ml_llm/proto/repl/core/: logger.py  recommender.py
ml_llm/proto/repl/scripts/: db_ingest.py
ml_llm/proto/repl/ui/: interface.py
ml_llm/rag_embedding/: README_COMPLETE.md  run_pipeline.sh  step1_review_to_sentences.py  step2_generate_rag_docs.py  step3_embed_documents.py
ml_llm/rag_embedding/EDA/: EDA1.ipynb  EDA2.ipynb  EDA3.ipynb
ml_pipeline/: README.md
ml_pipeline/archive/: README.md  game_info_crawing.py
ml_pipeline/collectors/: collect_games.py  collect_reviews.py  collect_users.py  pipeline_manager.py
ml_pipeline/core/: data_manager.py
ml_pipeline/docs/: README_game_info_jsonl.md  README_user_jsonl.md
ml_pipeline/prefect/: flows.py  utils.py
ml_rec/: .dockerignore  .docs_info.txt  API_EXAMPLES.md  BENTOML_SETUP_GUIDE.md  Dockerfile.bentoml  GCS_BACKUP_GUIDE.md  LOCAL_SETUP_GUIDE.md  MODELS_GUIDE.md  README.md  Readme.md  create_interaction_data.py  entrypoint.bentoml.sh  requirements.txt  run_recbole.py  test_inference.py  test_recommendation.py
ml_rec/configs/: recbole_config_bpr.yaml  (+5 more)
nginx/: nginx.conf
scripts/: backup_ml_rec_to_gcs.py  download_ml_rec_from_gcs.py  execute.py  predeploy_check.sh  test_chat_multiturn.py  validate_env.sh
(+119 files in other folders)
