[project]
name = "backend-recsys"
version = "0.1.0"
description = "백엔드와 추천엔진이 공유하는 최적화된 하이브리드 서빙 환경 (Windows GPU / Linux CPU)"
authors = [
    {name = "rlaqudwn1", email = "162764129+rlaqudwn1@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "pandas>=2.2.0",
    "torch>=2.6.0",
    "sqlalchemy>=2.0.45",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.0",
    "fastparquet>=2025.12.0",
    "google-cloud-storage>=3.8.0",
    "redis>=7.1.0",
    "asyncpg>=0.31.0",
    "python-dotenv>=1.2.1",
    "polars>=1.37.1",
    "pgvector<0.4",
    "httpx>=0.28.0",
    "recbole>=1.2.1",
    "xgboost>=3.1.3",
    "lightgbm>=4.6.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy<1.13.0",
    "tqdm>=4.67.1",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "wandb>=0.24.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "pydantic-settings>=2.12.0",
    "langchain-postgres>=0.0.16",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.7",
    "langchain-core>=1.2.7",
    "sentence-transformers>=5.2.2",
    "numpy>=1.24.0,<2.0.0",
    "alembic>=1.18.3",
    "prefect>=3.1.0",
    "ray>=2.0.0",
    "kmeans-pytorch",
    "loguru",
    "hyperopt",
    "colorlog",
    "torchvision>=0.21.0",
]

# [tool.uv] 플랫폼별 Torch 인덱스 자동 전환 설정
[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-cu124", marker = "sys_platform == 'win32'" },
  { index = "pytorch-cpu", marker = "sys_platform == 'linux'" },
]

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
