[project]
name = "backend-recsys"
version = "0.1.0"
description = "백엔드와 추천엔진이 공유하는 uv 공간입니다"
authors = [
    {name = "rlaqudwn1", email = "162764129+rlaqudwn1@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.128.0",
    "uvicorn>=0.40.0",
    "pandas>=2.2.0",
    "torch>=2.6.0",
    "sqlalchemy>=2.0.45",
    "psycopg2-binary>=2.9.11",
    "pyarrow>=23.0.0",
    "fastparquet>=2025.12.0",
    "google-cloud-storage>=3.8.0",
    "redis>=7.1.0",
    "asyncpg>=0.31.0",
    "python-dotenv>=1.2.1",
    "polars>=1.37.1",
    "pgvector<0.4",
    "httpx>=0.28.0",
    "recbole>=1.2.1",
    "xgboost>=3.1.3",
    "lightgbm>=4.6.0",
    "pyyaml>=6.0.3",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "tqdm>=4.67.1",
    "matplotlib>=3.10.8",
    "seaborn>=0.13.2",
    "wandb>=0.24.0",
    "pydantic-settings>=2.12.0",
    "langchain-postgres>=0.0.16",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.7",
    "langchain-core>=1.2.7",
    "sentence-transformers>=5.2.2",
    "numpy>=1.24,<2.0",
    "alembic>=1.18.3",
]

# [tool.uv] 섹션에서 패키지 소스(Index)를 관리합니다.
# Pytorch CPU 버전을 우선적으로 찾도록 설정합니다.
[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
testpaths = ["test"]
# backend/를 import 루트로 추가해 `app`·`scripts`가 보이게 한다
# (기존 `python -m pytest` 우회를 대체).
pythonpath = ["."]
asyncio_mode = "auto"
# 마커 체계 (T16 · SPEC §6): 미등록 마커 경고를 에러로 승격해 오타를 차단한다.
addopts = "--strict-markers"
markers = [
    "unit: 외부 의존 0 — DB·Redis·네트워크 없이 실행 (기본 러너)",
    "integration: DB·Redis 등 실제 인프라 필요 (docker compose 선행)",
    "manual: 실제 외부 API 호출 — 기본 skip, env 가드로만 실행",
]
