[project]
name = "proj-game-rec"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.12.1",
    "asttokens==3.0.1",
    "async-timeout==4.0.3",
    "attrs==25.4.0",
    "backoff==2.2.1",
    "bcrypt==5.0.0",
    "build==1.4.0",
    "certifi==2026.1.4",
    "charset-normalizer==3.4.4",
    "chromadb==1.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "coloredlogs==15.0.1",
    "comm==0.2.3",
    "debugpy==1.8.19",
    "decorator==5.2.1",
    "distro==1.9.0",
    "durationpy==0.10",
    "exceptiongroup==1.3.1",
    "executing==2.2.1",
    "filelock==3.19.1",
    "filetype==1.2.0",
    "flatbuffers==25.12.19",
    "fsspec==2025.10.0",
    "google-ai-generativelanguage==0.10.0",
    "google-api-core==2.29.0",
    "google-auth==2.47.0",
    "googleapis-common-protos==1.72.0",
    "greenlet==3.2.4",
    "grpcio==1.76.0",
    "grpcio-status==1.76.0",
    "h11==0.16.0",
    "hf-xet==1.2.0",
    "httpcore==1.0.9",
    "httptools==0.7.1",
    "httpx==0.28.1",
    "huggingface-hub==1.3.2",
    "humanfriendly==10.0",
    "idna==3.11",
    "importlib-metadata==8.7.1",
    "importlib-resources==6.5.2",
    "ipykernel==6.31.0",
    "ipython==8.18.1",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jsonpatch==1.33",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "kubernetes==35.0.0",
    "langchain==0.3.27",
    "langchain-chroma==0.2.6",
    "langchain-core==0.3.83",
    "langchain-google-genai==2.1.12",
    "langchain-text-splitters==0.3.11",
    "langsmith==0.4.37",
    "markdown-it-py==3.0.0",
    "markupsafe==2.1.5",
    "matplotlib-inline==0.2.1",
    "mdurl==0.1.2",
    "mmh3==5.2.0",
    "mpmath==1.3.0",
    "nest-asyncio==1.6.0",
    "networkx==3.2.1",
    "numpy>=2.0.2",
    "oauthlib==3.3.1",
    "onnxruntime>=1.19.2",
    "opentelemetry-api==1.39.1",
    "opentelemetry-exporter-otlp-proto-common==1.39.1",
    "opentelemetry-exporter-otlp-proto-grpc==1.39.1",
    "opentelemetry-proto==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-semantic-conventions==0.60b1",
    "orjson==3.11.5",
    "overrides==7.7.0",
    "packaging==25.0",
    "parso==0.8.5",
    "pillow==11.3.0",
    "platformdirs==4.4.0",
    "polars==1.36.1",
    "polars-runtime-32==1.36.1",
    "posthog==5.4.0",
    "prompt-toolkit==3.0.52",
    "proto-plus==1.27.0",
    "protobuf==6.33.4",
    "psutil==7.2.1",
    "pure-eval==0.2.3",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pybase64==1.4.3",
    "pydantic==2.12.5",
    "pydantic-core==2.41.5",
    "pygments==2.19.2",
    "pypika==0.50.0",
    "pyproject-hooks==1.2.0",
    "pyreadline3==3.5.4",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "pywin32==311",
    "pyyaml==6.0.3",
    "pyzmq==27.1.0",
    "referencing==0.36.2",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rich==14.2.0",
    "rpds-py==0.27.1",
    "rsa==4.9.1",
    "shellingham==1.5.4",
    "six==1.17.0",
    "sqlalchemy==2.0.45",
    "stack-data==0.6.3",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "tokenizers==0.22.2",
    "tomli==2.4.0",
    "tornado==6.5.4",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typer==0.21.1",
    "typer-slim==0.21.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uuid-utils==0.13.0",
    "uvicorn==0.39.0",
    "watchfiles==1.1.1",
    "wcwidth==0.2.14",
    "websocket-client==1.9.0",
    "websockets==15.0.1",
    "zipp==3.23.0",
    "zstandard==0.25.0",
]
