[project]
name = "rag-app"
version = "0.1.0"
description = "Steam Game Recommendation RAG App"
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "streamlit>=1.30.0",
    "langchain>=0.3.0",
    "langchain-postgres>=0.0.9",
    "langchain-huggingface>=0.1.0",
    "langchain-ollama>=0.2.0",
    "psycopg2-binary>=2.9.9",
    "polars>=1.0.0",
    "jinja2>=3.1.0",
    "sentence-transformers>=3.0.0",
    "python-dotenv>=1.0.0",
    "torch>=2.6.0",
    "numpy>=1.24.0"
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ipykernel>=6.0.0"
]
